kubernetes/apps/openspeedtest/app/deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openspeedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest:v2.0.6
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
