kubernetes/apps/openspeedtest/app/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openspeedtest
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
